# TLLM_QMM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: cutlass.cmake  tensorrt_llm.cmake
src/: lib.cpp  lib.h  py_binding.cpp
src/plugins/w8a8Plugin/: w8a8Plugin.cpp  w8a8Plugin.h
src/plugins/weightOnlyGroupwiseQuantMatmulPlugin/: weightOnlyGroupwiseQuantMatmulPlugin.cpp  weightOnlyGroupwiseQuantMatmulPlugin.h
src/plugins/weightOnlyQuantMatmulPlugin/: weightOnlyQuantMatmulPlugin.cpp  weightOnlyQuantMatmulPlugin.h
src/tensorrt_llm/common/: dtype.hpp
src/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/: interleaved_numeric_conversion.h
src/tensorrt_llm/kernels/cutlass_kernels/: cutlass_preprocessors.cu
src/tensorrt_llm/kernels/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm_template.h
src/tensorrt_llm/plugins/common/: gemmPluginProfiler.cpp  gemmPluginProfiler.h
tests/: test_awq.py  test_awq_fp8.py  test_gptq.py  test_gptq_fp8.py  test_preprocess_weight.cu
tllm_qmm/: __init__.py  awq_utils.py  gptq_utils.py  weight_only_quant_gemm.py
